Refatoração baseada em classes 01
